force-app/main/default/objects/b3s__Employee_Request__c/b3s__Employee_Request__c.object-meta.xml
<CustomObject>
    <label>Employee Request</label>
    <nameField>
        <displayFormat>EMP-REQ-{00000}</displayFormat>
        <label>Employee Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>