force-app/main/default/objects/b3s__Employee_Request__c/fields/b3s__Start__c.field-meta.xml
<CustomField>
    <fullName>b3s__Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>